--- a/module/Application/view/application/driver/index.phtml
+++ b/module/Application/view/application/driver/index.phtml
@@ -1,25 +1,35 @@
-<h2>Drivers List</h2>
-<table>
-    <tr>
-        <th>Name</th>
-        <th>RG</th>
-        <th>CPF</th>
-        <th>Phone</th>
-        <th>Vehicle</th>
-        <th>Actions</th>
-    </tr>
-    <?php foreach ($drivers as $driver): ?>
-    <tr>
-        <td><?= $driver->getName(); ?></td>
-        <td><?= $driver->getRg(); ?></td>
-        <td><?= $driver->getCpf(); ?></td>
-        <td><?= $driver->getPhone(); ?></td>
-        <td><?= $driver->getVehicle() ? $driver->getVehicle()->getLicensePlate() : 'N/A'; ?></td>
-        <td>
-            <a href="<?= $this->url('driver', ['action' => 'edit', 'id' => $driver->getId()]); ?>">Edit</a> |
-            <a href="<?= $this->url('driver', ['action' => 'delete', 'id' => $driver->getId()]); ?>">Delete</a>
-        </td>
-    </tr>
-    <?php endforeach; ?>
-</table>
-<a href="<?= $this->url('driver', ['action' => 'add']); ?>">Add New Driver</a>
+<div class="card">
+    <div class="card-header d-flex justify-content-between align-items-center">
+        <h2 class="m-0">Listagem de Motoristas</h2>
+        <a href="<?= $this->url('driver', ['action' => 'add']); ?>" class="btn btn-primary">Adicionar Motorista</a>
+    </div>
+    <div class="card-body">
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th>Nome</th>
+                <th>RG</th>
+                <th>CPF</th>
+                <th>Telefone</th>
+                <th>Veículo</th>
+                <th></th>
+            </tr>
+            <?php foreach ($drivers as $driver): ?>
+                <tr>
+                    <td><?= $driver->getName(); ?></td>
+                    <td><?= $driver->getRg(); ?></td>
+                    <td><?= $driver->getCpf(); ?></td>
+                    <td><?= $driver->getPhone(); ?></td>
+                    <td><?= $driver->getVehicle() ? $driver->getVehicle()->getLicensePlate() : 'N/A'; ?></td>
+                    <td>
+                        <a href="<?= $this->url('driver', ['action' => 'edit', 'id' => $driver->getId()]); ?>">
+                            Editar
+                        </a> |
+                        <a onclick="return confirm('Deseja realmente excluir esse motorista?')" href="<?= $this->url('driver', ['action' => 'delete', 'id' => $driver->getId()]); ?>">
+                            Excluir
+                        </a>
+                    </td>
+                </tr>
+            <?php endforeach; ?>
+        </table>
+    </div>
+</div>
