--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,75 +1,39 @@
 <?php
+
 /**
  * @var Laminas\View\Renderer\PhpRenderer $this
  */
 ?>
-<div class="p-5 mb-4 bg-light rounded-3">
-    <h1 class="display-4">Welcome to<br>Laminas MVC Skeleton Application</h1>
 
-    <p>
-        Congratulations! You have successfully installed the
-        <a href="https://github.com/laminas/laminas-mvc-skeleton" target="_blank">Laminas MVC Skeleton</a>.
-        This skeleton can serve as a simple starting point for you to begin
-        building your application on Laminas MVC.
-    </p>
-
-    <hr class="my-4">
-
-    <a class="btn btn-primary btn-lg" href="https://github.com/laminas" target="_blank">
-        Check Laminas on GitHub &raquo;
-    </a>
-</div>
-
-<div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
-        <div class="card h-100">
-            <h2 class="card-header">Follow Development</h2>
+<div class="row">
+    <div class="col-md-6">
+        <div class="card text-white bg-primary mb-3">
+            <div class="card-header">Motoristas</div>
             <div class="card-body">
-                <p>
-                    Laminas Project is under active development. If you are
-                    interested in following the development, you can check
-                    <a href="https://getlaminas.org/blog/">Laminas dev blog</a>,
-                    and <a href="https://github.com/issues?utf8=%E2%9C%93&amp;q=is:issue+org:laminas">Laminas issue tracker</a>
-                    (link requires a GitHub account). This is a great resource
-                    for staying up to date with the latest developments!
-                </p>
-            </div>
-            <div class="card-footer">
-                <a class="btn btn-primary" href="https://getlaminas.org/" target="_blank">Laminas Project Portal &raquo;</a>
+                <h5 class="card-title d-flex justify-content-between align-items-center">
+                    <span>Total de Motoristas</span>
+                    <i class="fs-1 fa-regular fa-id-card"></i>
+                </h5>
+                <p class="card-text fs-3" id="motoristas-count"><?= $countDrivers ?></p>
+                <div class="d-grid gap-2">
+                    <a href="<?= $this->url('driver') ?>" class="btn btn-light">Ver Motoristas</a>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="col">
-        <div class="card h-100">
-            <h2 class="card-header">Discover Modules</h2>
+    <div class="col-md-6">
+        <div class="card text-white bg-success mb-3">
+            <div class="card-header">Veículos</div>
             <div class="card-body">
-                <p>
-                    Laminas MVC is a modular application.
-                    You can find multiple compatible modules on packagist.
-                </p>
-            </div>
-            <div class="card-footer">
-                <a class="btn btn-primary" href="https://packagist.org/?tags=module~zf2~zendframework~zend%20framework~zend%20framework%202~zf3~zf~zend~laminas" target="_blank">
-                    Explore Laminas Modules &raquo;</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="col">
-        <div class="card h-100">
-            <h2 class="card-header">Help &amp; Support</h2>
-            <div class="card-body">
-                <p>
-                    If you need any help or support while developing with Laminas,
-                    you may reach us via <a href="https://laminas.dev/chat">chat</a> or
-                    <a href="https://discourse.laminas.dev">forum</a>.
-                    We'd love to hear any questions or feedback you may have
-                    regarding any release.
-                </p>
-            </div>
-            <div class="card-footer">
-                <a class="btn btn-primary" href="https://laminas.dev/chat" target="_blank">Ping us on chat &raquo;</a>
+                <h5 class="card-title d-flex justify-content-between align-items-center">
+                    <span>Total de Veículos</span>
+                    <i class="fs-1 fa-solid fa-truck"></i>
+                </h5>
+                <p class="card-text fs-3" id="veiculos-count"><?= $countVehicles ?></p>
+                <div class="d-grid gap-2">
+                    <a href="<?= $this->url('vehicle') ?>" class="btn btn-light">Ver Veículos</a>
+                </div>
             </div>
         </div>
     </div>
