--- a/module/Application/view/application/vehicle/index.phtml
+++ b/module/Application/view/application/vehicle/index.phtml
@@ -1,27 +1,37 @@
-<h2>Vehicles List</h2>
-<table>
-    <tr>
-        <th>License Plate</th>
-        <th>Renavam</th>
-        <th>Model</th>
-        <th>Brand</th>
-        <th>Year</th>
-        <th>Color</th>
-        <th>Actions</th>
-    </tr>
-    <?php foreach ($vehicles as $vehicle): ?>
-    <tr>
-        <td><?= $vehicle->getLicensePlate(); ?></td>
-        <td><?= $vehicle->getRenavam(); ?></td>
-        <td><?= $vehicle->getModel(); ?></td>
-        <td><?= $vehicle->getBrand(); ?></td>
-        <td><?= $vehicle->getYear(); ?></td>
-        <td><?= $vehicle->getColor(); ?></td>
-        <td>
-            <a href="<?= $this->url('vehicle', ['action' => 'edit', 'id' => $vehicle->getId()]); ?>">Edit</a> |
-            <a href="<?= $this->url('vehicle', ['action' => 'delete', 'id' => $vehicle->getId()]); ?>">Delete</a>
-        </td>
-    </tr>
-    <?php endforeach; ?>
-</table>
-<a href="<?= $this->url('vehicle', ['action' => 'add']); ?>">Add New Vehicle</a>
+<div class="card">
+    <div class="card-header d-flex justify-content-between align-items-center">
+        <h2 class="m-0">Listagem de Veículos</h2>
+        <a href="<?= $this->url('vehicle', ['action' => 'add']); ?>" class="btn btn-primary">Adicionar Veículo</a>
+    </div>
+    <div class="card-body">
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th>Placa</th>
+                <th>Renavam</th>
+                <th>Modelo</th>
+                <th>Marca</th>
+                <th>Ano</th>
+                <th>Cor</th>
+                <th></th>
+            </tr>
+            <?php foreach ($vehicles as $vehicle): ?>
+                <tr>
+                    <td><?= $vehicle->getLicensePlate(); ?></td>
+                    <td><?= $vehicle->getRenavam(); ?></td>
+                    <td><?= $vehicle->getModel(); ?></td>
+                    <td><?= $vehicle->getBrand(); ?></td>
+                    <td><?= $vehicle->getYear(); ?></td>
+                    <td><?= $vehicle->getColor(); ?></td>
+                    <td>
+                        <a href="<?= $this->url('vehicle', ['action' => 'edit', 'id' => $vehicle->getId()]); ?>">
+                            Editar
+                        </a> |
+                        <a onclick="return confirm('Deseja realmente excluir esse veículo?')" href="<?= $this->url('vehicle', ['action' => 'delete', 'id' => $vehicle->getId()]); ?>">
+                            Excluir
+                        </a>
+                    </td>
+                </tr>
+            <?php endforeach; ?>
+        </table>
+    </div>
+</div>
