--- a/module/Application/view/application/driver/add.phtml
+++ b/module/Application/view/application/driver/add.phtml
@@ -26,7 +26,7 @@
             </div>
             <div class="col-12">
                 <button type="submit" name="submit" id="submitbutton" class="btn btn-success mt-3">Gravar</button>
-                <a href="<?= $this->url('driver'); ?>" class="btn btn-outline-danger mt-3">Cancelar</a>
+                <a href="javascript:history.back(-1)" class="btn btn-outline-danger mt-3">Cancelar</a>
             </div>
         </form>
     </div>
