--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -37,4 +37,12 @@
             </div>
         </div>
     </div>
+
+    <div class="col-md-12">
+        <div class="card text-whitemb-3">
+            <div class="card-body">
+                <div id="load-map"></div>
+            </div>
+        </div>
+    </div>
 </div>
