--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -31,6 +31,8 @@
 
     <!-- Scripts -->
     <?= $this->headScript() ?>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtup0Vv0AZRIXNuIKN2DmQ61R5n0gWuw4&callback=initMap" async defer></script>
 </head>
 
 <body>
