--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,16 +13,7 @@
     color: #6F1A96;
 }
 
-.navbar {
-    /* background-color: var(--brand-color); */
-}
-
-.btn-primary {
-    /* background-color: var(--brand-color);
-    border-color: var(--brand-color); */
-}
-
-/* allows bootstrap to style Laminas Navigation generated menu items within the navbar */
-.navbar li.active a {
-    /* color: var(--bs-navbar-active-color); */
+#load-map {
+    height: 500px;
+    width: 100%;
 }
